--- a/pl/mail/chrome/messenger/gloda.properties
+++ b/pl/mail/chrome/messenger/gloda.properties
@@ -38,31 +38,23 @@
 
 # FIXME: sprawdzić w ui (wszystko)
 
-gloda.message.attr.account.facetLabel  = Konto
-gloda.message.attr.folder.facetLabel   = Folder
-gloda.message.attr.fromMe.facetLabel   = Ode mnie
-gloda.message.attr.toMe.facetLabel     = Do mnie
-gloda.message.attr.involves.facetLabel = Korespondenci
-# FIXME: dotłumaczyć (po sprawdzeniu w ui)
-gloda.message.attr.involves.includeLabel=involving any of:
-gloda.message.attr.involves.excludeLabel=not involving:
-gloda.message.attr.involves.remainderLabel=other participants:
+gloda.message.attr.account.facetNameLabel  = Konto
+gloda.message.attr.folder.facetNameLabel   = Folder
+gloda.message.attr.fromMe.facetNameLabel   = Ode mnie
+gloda.message.attr.toMe.facetNameLabel     = Do mnie
+gloda.message.attr.involves.facetNameLabel = Korespondenci
+gloda.message.attr.involves.includeLabel   = z udziałem:
+gloda.message.attr.involves.excludeLabel   = bez udziału:
+gloda.message.attr.involves.remainderLabel = inni korespondenci:
 
-gloda.message.attr.date.facetLabel   = Data
-
-gloda.message.attr.attachmentTypes.facetLabel   = Załączniki
-
-gloda.message.attr.mailing-list.facetLabel   = Lista dyskusyjna
-
-gloda.message.attr.tag.facetLabel   = Etykiety
-
-gloda.message.attr.star.facetLabel   = Oznaczone
-
-gloda.message.attr.read.facetLabel   = Status przeczytania
-
-gloda.message.attr.repliedTo.facetLabel   = Odpowiedź
-
-gloda.message.attr.forwarded.facetLabel   = Przekazano
+gloda.message.attr.date.facetNameLabel            = Data
+gloda.message.attr.attachmentTypes.facetNameLabel = Załączniki
+gloda.message.attr.mailing-list.facetNameLabel    = Lista dyskusyjna
+gloda.message.attr.tag.facetNameLabel             = Etykiety
+gloda.message.attr.star.facetNameLabel            = Oznaczone
+gloda.message.attr.read.facetNameLabel            = Status przeczytania
+gloda.message.attr.repliedTo.facetNameLabel       = Odpowiedziano do
+gloda.message.attr.forwarded.facetNameLabel       = Przekazano
 
 gloda.mimetype.category.archives.label  = archiwa
 gloda.mimetype.category.documents.label = dokumenty
