--- a/pl/mail/chrome/messenger/editContactOverlay.properties
+++ b/pl/mail/chrome/messenger/editContactOverlay.properties
@@ -5,3 +5,6 @@ editDetailsLabel     = Edytuj szczegóły
 editDetailsAccessKey = s
 viewDetailsLabel     = Wyświetl szczegóły
 viewDetailsAccessKey = s
+
+deleteContactTitle   = Usuń kontakt
+deleteContactMessage = Czy usunąć wizytówkę tego kontaktu z książki adresowej?
