--- a/da/calendar/chrome/calendar/calendar.properties
+++ b/da/calendar/chrome/calendar/calendar.properties
@@ -21,6 +21,7 @@
 # Contributor(s): ArentJan Banck <ajbanck@planet.nl>
 #                 Eric Belhaire <belhaire@ief.u-psud.fr>
 #                 Philipp Kewisch <mozilla@kewis.ch>
+#                 Berend Cornelius <berend.cornelius@sun.com>
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -38,6 +39,8 @@
 
 # Misc. strings in JS
 
+# LOCALIZATION NOTE (PrintPreviewWindowTitle): 
+#    %1$S will be replaced with the title of a html frame
 PrintPreviewWindowTitle=Vis udskrift af %1$S
 Untitled=Uden navn
 
@@ -95,13 +98,31 @@ unableToRead=Kan ikke læse filen:
 unableToWrite=Kan ikke skrive til filen:
 defaultFileName=MozillaCalEvents
 HTMLTitle=Mozilla Kalender
+
+# LOCALIZATION NOTE (timezoneError): 
+# used for an error message like 'An unknown and undefined timezone was found while reading c:\Mycalendarfile.ics'
+#    %1$S will be replaced with the path to a file
 timezoneError=En ukendt og udefineret tidszone blev fundet ved læsning af %1$S.
+
+# LOCALIZATION NOTE (duplicateError): 
+#    %1$S will be replaced with number of duplicate items
+#    %2$S will be replaced with a file path pointing to a calendar
 duplicateError=%1$S elementer blev ignoreret, eftersom de eksisterer i både destinationskalenderen og %2$S.
+
 unableToCreateProvider=En fejl opstod i forbindelse med kalenderen på %1$S. Kalenderen vil ikke være tilgængelig.
 unknownTimezonesError=En fejl opstod ved klargøring af kalenderen placeret på %1$S. Kalenderen refererer muligvis til ukendte tidszoner. Installér venligst den seneste udvidelse calendar-timezones.xpi.
 missingCalendarTimezonesError=Ingen tidszoner blev fundet. Installér venligst udvidelsen calendar-timezones.xpi.
 
+# Sample: Unknown timezone "USPacific" in "Dentist Appt".  Using the 'floating' local timezone instead: 2008/02/28 14:00:00
+unknownTimezoneInItem=Ukendt tidszone "%1$S" in "%2$S".  Behandles i stedet som "flydende" lokal tidszone: %3$S
+TimezoneErrorsAlertTitle=Tidszonefejl
+TimezoneErrorsSeeConsole=Se fejlkonsol: Ukendte tidszoner behandles som "flydende" lokal tidszone.
+
 unsubscribeCalendarTitle=Stop abonnement på kalender
+
+# LOCALIZATION NOTE (unsubscribeCalendarMessage):
+# used for an message like 'Are you sure you want to unsubscribe from calendar "Home"?'
+#    %1$S will be replaced with the name of a calendar
 unsubscribeCalendarMessage=Er du sikker på, du vil stoppe abonnement på kalender "%1$S"?
 
 WeekTitle=Uge %1$S
@@ -113,9 +134,23 @@ None=Ingen
 ## @name UID_NOT_FOUND
 ## @loc none
 tooNewSchemaErrorBoxTitle=Dine kalenderdata er ikke kompatible med denne version af %1$S
+
+# LOCALIZATION NOTE (tooNewSchemaErrorBoxTextLightning):
+#    %1$S will be replaced with the name of the calendar application e.g. 'Lightning'
+#    %2$S will be replaced with the name of the host application 'calendar'
 tooNewSchemaErrorBoxTextLightning=Kalenderdata i din profil er opdateret af en nyere udgave af %1$S, en fortsættelse af operationen vil sandsynligvis resultere i tabt eller ødelagt data. %1$S bliver nu slået fra og %2$S genstartes.
+
+# LOCALIZATION NOTE (tooNewSchemaErrorBoxTextSunbird):
+#    %1$S will be replaced with the name of the calendar application e.g. 'Sunbird'
+#    %2$S will be replaced with the name of the host application 'calendar'
 tooNewSchemaErrorBoxTextSunbird=Kalenderdata i din profil er opdateret af en nyere udgave af %1$S, en fortsættelse af operationen vil sandsynligvis resultere i tabt eller ødelagt data. %1$S bliver nu lukket ned.
+
+# LOCALIZATION NOTE (tooNewSchemaButtonRestart):
+#    %1$S will be replaced with the name of the host application 'Calendar'
 tooNewSchemaButtonRestart=Genstart %1$S
+
+# LOCALIZATION NOTE (tooNewSchemaButtonQuit):
+#    %1$S will be replaced with the name of the host application 'Calendar'
 tooNewSchemaButtonQuit=Afslut %1$S
 
 # List of events or todos (unifinder)
@@ -153,20 +188,36 @@ filterOutlookCsv=Outlook-komma-separeret
 filterWav=Waveform Audio (%1$S)
 
 # Remote calendar errors
-errorTitle=Fejl ved overførsel af kalender
+genericErrorTitle=Der opstod en fejl
 httpPutError=Udgivelse af kalenderfilen mislykkedes.\nStatuskode: %1$S: %2$S
 otherPutError=Udgivelse af kalenderfilen mislykkedes.\nStatuskode: 0x%1$S
+
+# LOCALIZATION NOTE (readOnlyMode):
+# used for an message like 'There has been an error reading data for calendar: Home. It has been...'
+#    %1$S will be replaced with the name of a calendar
 readOnlyMode=Der opstod en fejl ved læsning af data fra kalender: %1$S. Kalenderen er gjort skrivebeskyttet, da ændringer i den sandsynligvis vil resultere i datatab. Du kan ændre dette ved at vælge "Rediger kalender".
+
+# LOCALIZATION NOTE (disabledMode):
+# used for an message like 'There has been an error reading data for calendar: Home. It has been...'
+#    %1$S will be replaced with the name of a calendar
 disabledMode=Der er opstået en læsningsfejl i kalenderen: %1$S. Den er blevet slået fra, indtil det er sikkert at bruge den.
+
+# LOCALIZATION NOTE (minorError):
+# used for an message like 'There has been an error reading data for calendar: Home. However this...'
+#    %1$S will be replaced with the name of a calendar
 minorError=Der opstod en fejl ved læsning af kalender: %1$S.  Fejlen er sandsynligvis ikke alvorlig, så programmet vil forsøge at fortsætte.
+
+# LOCALIZATION NOTE (stillReadOnlyError):
+# used for an message like 'There has been an error reading data for calendar: Home.'
+#    %1$S will be replaced with the name of a calendar
 stillReadOnlyError=Der opstod en fejl ved læsning af kalender: %1$S.
 utf8DecodeError=Der opstod en fejl ved afkodning af en iCalender-fil. Tjek, at filen er kodet i UTF-8-formatet. Vær især opmærksom på de danske bogstaver æ, ø og å samt symboler og accenttegn.
 icsMalformedError=Læsning af en iCalender-fil fejlede. Tjek, at filen overholder syntaksen i iCalender-formatet.
-itemModifiedOnServerTitle=Element åndret på serveren
+itemModifiedOnServerTitle=Element ændret på serveren
 itemModifiedOnServer=Dette element er for nyligt blevet ændret på serveren.\n
 modifyWillLoseData=Hvis du sender dine ændringer vil de overskrive de ændringer som findes på serveren.
 deleteWillLoseData=Hvis du sletter dette element vil ændringerne på serveren gå tabt.
-updateFromServer=Forkast mineændringer og genindlæs
+updateFromServer=Fortryd mine ændringer og genindlæs
 proceedModify=Send mine ændringer uanset
 proceedDelete=Slet alligevel
 dav_notDav=Ressourcen på %1$S er enten ikke en DAV-samling eller den er ikke tilgængelig
@@ -253,6 +304,9 @@ TZAlmostMatchesOSDifferAtMostAWeek=Denne tidszone svarer næsten til styresystem
 
 TZSeemsToMatchOS=Denne tidszone svarer tilsyneladende til styresystemets tidszone for dette år.
 
+# LOCALIZATION NOTE (TZFromOS):
+# used for a display of a chosen timezone
+#    %1$S will be replaced with the name of a timezone
 TZFromOS=Denne tidszone fra ZoneInfo blev valgt baseret på styresystemets tidszoneoplysninger "%1$S".
 
 # Localization note (TZFromLocale): Substitute name of your locale language.
@@ -289,7 +343,7 @@ yesterday=I går
 eventsonly=Begivenheder
 eventsandtasks=Begivenheder og opgaver
 tasksonly=Opgaver
-shortcalendarweek=KU
+shortcalendarweek=Uge
 
 go=Gå
 
@@ -302,25 +356,43 @@ last1=sidst
 last2=sidst
 
 # Master Password
-changeMasterPassword=Ændr hovedadgangskode...
+changeMasterPassword=Ãndr hovedadgangskode...
 pw_change2empty_in_fips_mode=Du er i øjeblikket i FIPS-tilstand. FIPS kræver, at du har angivet en hovedadgangskode.
 pw_change_failed_title=Ændring af adgangskode fejlede
 
 # Check for Updates     (SUNBIRD_ONLY)
-updatesItem_default=Tjek for opdateringerer…
-updatesItem_defaultFallback=Tjek for opdateringer…
-updatesItem_downloading=Henter %S…
-updatesItem_downloadingFallback=Henter %S…
-updatesItem_resume=Genoptag hentning %S…
+updatesItem_default=Tjek for opdateringerer...
+updatesItem_defaultFallback=Tjek for opdateringer...
+updatesItem_downloading=Henter %S...
+updatesItem_downloadingFallback=Henter %S...
+updatesItem_resume=Genoptag hentning %S...
 updatesItem_resumeFallback=Genoptag hentning %S
 updatesItem_pending=Aktivér den hentede opdatering nu?
 updatesItem_pendingFallback=Aktivér den hentede opdatering nu?
 
 # Alarm Dialog
-alarmWindowTitle=%1$S Påmindelser
+# LOCALIZATION NOTE (alarmWindowTitle.label): Semi-colon list of plural
+# forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+alarmWindowTitle.label=#1 Påmindelse;#1 Påmindelser
+
+# LOCALIZATION NOTE (alarmStarts):
+# used for a display the start of an alarm like 'Starts:  Thu 2 Oct 2008 13:21'
+#    %1$S will be replaced with a date-time
 alarmStarts=Begynder: %1$S
+
+# LOCALIZATION NOTE (alarmTodayAt):
+# used for a display the date-time of an alarm like 'Today at Thu 2 Oct 2008 13:21'
+#    %1$S will be replaced with a date-time
 alarmTodayAt=I dag kl. %1$S
+
+# LOCALIZATION NOTE (alarmTomorrowAt):
+# used for a display the date-time of an alarm like 'Tomorrow at Thu 2 Oct 2008 13:21'
+#    %1$S will be replaced with a date-time
 alarmTomorrowAt=I morgen kl. %1$S
+
+# LOCALIZATION NOTE (alarmYesterdayAt):
+# used for a display the date-time of an alarm like 'Yesterday at Thu 2 Oct 2008 13:21'
+#    %1$S will be replaced with a date-time
 alarmYesterdayAt=I går kl. %1$S
 
 # Alarm interface strings
@@ -335,18 +407,48 @@ offlineTooltip=Du er i øjeblikket offline.
 onlineTooltip=Du er i øjeblikket online.
 
 taskDetailsStatusNeedsAction=Kræver handling
+
+# LOCALIZATION NOTE (taskDetailsStatusInProgress):
+# used for a display of how much of a task is completed '25% Complete'
+#    %1$S will be replaced with the number of percentage completed
 taskDetailsStatusInProgress=%1$S%% Afsluttet
 taskDetailsStatusCompleted=Afsluttet
+
+# LOCALIZATION NOTE (taskDetailsStatusCompletedOn):
+# used for a display of completion date like 'Completed on Thu 2 Oct 2008 13:21'
+#    %1$S will be replaced with the completion date-time of the task
 taskDetailsStatusCompletedOn=Afsluttet den %1$S
 taskDetailsStatusCancelled=Afbrudt
 
-gettingCalendarInfoCommon=Tjekker kalendare…
+gettingCalendarInfoCommon=Tjekker kalendare...
+
+# LOCALIZATION NOTE (gettingCalendarInfoDetail):
+# used for a progress-display of processed like 'Checking Calendar 5 of 10'
+#    %1$S will be replaced with the index of the currently processed calendar
+#    %2$S will be replaced with the total numbers of calendars
 gettingCalendarInfoDetail=Tjekker kalender %1$S af %2$S
 
+# LOCALIZATION NOTE (errorCode):
+#    %1$S will be replaced with the number of an error code
 errorCode=Fejlkode: %1$S
+
+# LOCALIZATION NOTE (errorDescription):
+#    %1$S will be replaced with the description of an error
 errorDescription=Beskrivelse: %1$S
+
+# LOCALIZATION NOTE (errorWriting):
+# used for an message like 'An error occurred when writing to the calendar Home!'
+#    %1$S will be replaced with the name of a calendar
 errorWriting=En fejl opstod ved skrivning til kalender %1$S!
+
+# LOCALIZATION NOTE (tooltipCalendarDisabled):
+# used for an alert-message like 'The calendar Home is momentarily not available'
+#    %1$S will be replaced with the name of a calendar
 tooltipCalendarDisabled=Kalenderen %1$S er ikke tilgængelig i øjeblikket
+
+# LOCALIZATION NOTE (tooltipCalendarReadOnly):
+# used for an message like 'The calendar Home is readonly'
+#    %1$S will be replaced with the name of a calendar
 tooltipCalendarReadOnly=Kalender %1$S er ikke skrivbar
 
 taskEditInstructions=Klik her for at tilføje en ny opgave
@@ -357,29 +459,40 @@ eventDetailsStartDate=Start:
 eventDetailsEndDate=Slut:
 taskDetailsStartDate=Startdato:
 taskDetailsEndDate=Slutdato:
+
+# LOCALIZATION NOTE (datetimeWithTimezone):
+# used for a display of a date-time with timezone 'Thu 2 Oct 2008 13:21', Europe/Paris
+#    %1$S will be replaced with the completion date-time
+#    %2$S will be replaced with the name of the timezone
 datetimeWithTimezone=%1$S, %2$S
 
-longCalendarWeek=Kalenderuge: %1$S
+# LOCALIZATION NOTE (singleLongCalendarWeek):
+# used for display of calendar weeks in short form like 'Calendar Week 43'
+#    %1$S will be replaced with the index of the week
+singleLongCalendarWeek=Kalenderuge: %1$S
+
+# LOCALIZATION NOTE (severalLongCalendarWeeks):
+# used for display of calendar weeks in short form like 'Calendar Weeks 43 - 45'
+#    %1$S will be replaced with the index of the start-week
+#    %2$S will be replaced with the index of the end-week
 severalLongCalendarWeeks=Kalenderuger %1$S-%2$S
 
-oneDayBack=En dag tilbage
-oneDayForward=En dag frem
-oneMonthBack=En måned tilbage
-oneMonthForward=En måned frem
-oneWeekBack=En uge tilbage
-oneWeekForward=En uge frem
-gotoToday=Gå til i dag
+# LOCALIZATION NOTE (singleShortCalendarWeek):
+# used for display of calendar weeks in short form like 'CW 43'
+#    %1$S will be replaced with the index of the week
+singleShortCalendarWeek=Uge: %1$S
+
+# LOCALIZATION NOTE (severalShortCalendarWeeks):
+# used for display of calendar weeks in short form like 'CWs 43 - 45'
+#    %1$S will be replaced with the index of the start-week
+#    %2$S will be replaced with the index of the end-week
+severalShortCalendarWeeks=Uger %1$S-%2$S
 
 # Task tree, "Due In" column.
-dueInDays1=1 dag
-# Used for "2 days"
-dueInDays2=2 dage
-# Used for more than 2 days
-dueInDaysN=%1$S dage
-
-dueInHours1=1 time
-dueInHours2=2 timer
-dueInHoursN=%1$S timer
+# LOCALIZATION NOTE (dueInDays, dueInHours): Semi-colon list of plural
+# forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+dueInDays=#1 dag;#1 dage
+dueInHours=#1 time;#1 timer
 dueInLessThanOneHour=< 1 time
 
 # LOCALIZATION NOTE (monthInYear):
@@ -394,7 +507,7 @@ monthInYear=%1$S %2$S
 #    %2$S will be replaced with the day-index of the start date
 #    %3$S will be replaced with the day-index of the end date
 #    %4$S will be replaced with the common year of both dates
-dayIntervalInMonth=%1$S %2$S – %3$S, %4$S
+dayIntervalInMonth=%2$S. - %3$S.  %1$S, %4$S
 
 # LOCALIZATION NOTE (dayIntervalBetweenMonths):
 # used for display of intervals in the form 'September 29 - October 5, 2008'
@@ -403,7 +516,7 @@ dayIntervalInMonth=%1$S %2$S – %3$S, %4$S
 #    %3$S will be replaced with name of the month of the end date
 #    %4$S will be replaced with the day-index of the end date
 #    %5$S will be replaced with the commmon year of both dates
-dayIntervalBetweenMonths=%1$S %2$S – %3$S %4$S, %5$S
+dayIntervalBetweenMonths=%2$S. %1$S - %4$S. %3$S, %5$S
 
 # LOCALIZATION NOTE (dayIntervalBetweenYears):
 # used for display of intervals in the form 'December 29, 2008 - January 4, 2009'
@@ -413,7 +526,7 @@ dayIntervalBetweenMonths=%1$S %2$S – %3$S %4$S, %5$S
 #    %4$S will be replaced with name of the month of the end date
 #    %5$S will be replaced with the day-index of the end date
 #    %6$S will be replaced with the year of the end date
-dayIntervalBetweenYears=%1$S %2$S, %3$S – %4$S %5$S, %6$S
+dayIntervalBetweenYears=%2$S. %1$S, %3$S - %5$S. %4$S, %6$S
 
 # LOCALIZATION NOTE (datetimeIntervalOnSameDay):
 # used for intervals where end is on the same day as start, so we can leave out the
@@ -422,7 +535,7 @@ dayIntervalBetweenYears=%1$S %2$S, %3$S – %4$S %5$S, %6$S
 #    %1$S will be replaced with the date of the start date
 #    %2$S will be replaced with the time of the start date
 #    %3$S will be replaced with the time of the end date
-datetimeIntervalOnSameDay=%1$S %2$S – %3$S
+datetimeIntervalOnSameDay=%1$S %2$S - %3$S
 
 # LOCALIZATION NOTE (datetimeIntervalOnSeveralDays):
 # used for intervals spanning multiple days by including date and time
@@ -431,11 +544,33 @@ datetimeIntervalOnSameDay=%1$S %2$S – %3$S
 #    %2$S will be replaced with the time of the start date
 #    %3$S will be replaced with the date of the end date
 #    %4$S will be replaced with the time of the end date
-datetimeIntervalOnSeveralDays=%1$S %2$S – %3$S %4$S
+datetimeIntervalOnSeveralDays=%1$S %2$S - %3$S %4$S
+
+# LOCALIZATION NOTE (datetimeIntervalTaskWithoutDate):
+# used for task without start and due date
+# (showed only in exported calendar in Html format)
+datetimeIntervalTaskWithoutDate=Ingen start eller afslutningsdag
+# LOCALIZATION NOTE (datetimeIntervalTaskWithoutDueDate):
+# used for intervals in task with only start date
+# displayed form is 'start date 5 Jan 2006 13:00'
+# (showed only in exported calendar in Html format)
+#    %1$S will be replaced with the date of the start date
+#    %2$S will be replaced with the time of the start date
+datetimeIntervalTaskWithoutDueDate=startdag %1$S %2$S
+# LOCALIZATION NOTE (datetimeIntervalTaskWithoutStartDate):
+# used for intervals in task with only due date
+# displayed form is 'due date 5 Jan 2006 13:00'
+# (showed only in exported calendar in Html format)
+#    %1$S will be replaced with the date of the due date
+#    %2$S will be replaced with the time of the due date
+datetimeIntervalTaskWithoutStartDate=afslutningsdag %1$S %2$S
 
 deleteTaskLabel=Slet opgave
-deletetaskAccesskey=S
+deleteTaskMessage=Vil du virkelig slette denne opgave?
+deleteTaskAccesskey=s
 deleteItemLabel=Slet
+deleteItemMessage=Vil du virkelig slette dette element?
 deleteItemAccesskey=S
 deleteEventLabel=Slet begivenhed
+deleteEventMessage=Vil du virkelig slette denne begivenhed?
 deleteEventAccesskey=S
