--- a/da/calendar/chrome/lightning/lightning.properties
+++ b/da/calendar/chrome/lightning/lightning.properties
@@ -37,6 +37,11 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# addon description:
+extensions.{e2fda1a4-762b-4020-b5ad-a41df1933103}.name=Lightning
+extensions.{e2fda1a4-762b-4020-b5ad-a41df1933103}.description=En integreret kalender til Thunderbird
+extensions.{e2fda1a4-762b-4020-b5ad-a41df1933103}.creator=Mozillas kalender-projekt
+
 # Lightning branding
 brandShortName=Lightning
 
@@ -57,19 +62,23 @@ imipAddedItemToCal=Begivenheden er tilføjet til kalender
 imipCanceledItem=Begivenheden er slettet
 imipUpdatedItem=Begivenheden er opdateret
 imipBarCancelText=Denne besked indeholder en aflysning af en begivenhed.
+imipBarRefreshText=Denne meddelelse beder om en begivenhedsopdatering.
+imipBarPublishText=Denne meddelelse indeholder en begivenhed.
 imipBarRequestText=Denne meddelelse indeholder en invitation til en begivenhed.
 imipBarUpdateText=Denne meddelelse indeholder en opdatering til en eksisterende begivenhed.
-imipBarAlreadyAddedText=Denne meddelelse indeholder en begivenhed, der allerede er blevet føjet til din kalender.
+imipBarAlreadyProcessedText=Denne meddelelse indeholder en begivenhed, der allerede er blevet behandlet.
 imipBarReplyText=Denne meddelelse indeholder et svar til en invitation.
 imipBarUnsupportedText=Denne meddelelse indeholder en begivenhed, som denne version af Lightning ikke kan håndtere.
+imipBarProcessingFailed=Behandlingen af meddelelsen fejlede. Status: %1$S.
 imipAcceptInvitation.label=Accepter
 imipCancelInvitation.label=Slet
 imipDeclineInvitation.label=Afvis
-imipUpdateInvitation.label=Opdater
+imipUpdate.label=Opdater
 imipAcceptTentativeInvitation.label=Gentagelse
-imipSendMailTitle=Informér deltagere
-imipSendMail=Ønsker du at sende en informations-mail nu?
-imipSendMailOutlook2000CompatMode=Understøt Outlook 2000 og Outlook 2002/XP
+imipSend.label=Send
+imipSendMail.title=E-mail-besked
+imipSendMail.text=Vil du sende en e-mail-besked nu?
+imipSendMail.Outlook2000CompatMode.text=Understøt Outlook 2000 og Outlook 2002/XP
 imipNoIdentity=Ingen
 
 itipReplySubject=Svar til begivenhedsinvitation: %1$S
@@ -78,4 +87,6 @@ itipReplyBodyDecline=%1$S har afvist din begivenhedsinvitation.
 itipRequestSubject=Begivenhedsinvitation: %1$S
 itipRequestBody=%1$S har inviteret dig til %2$S
 itipCancelSubject=Begivenheden er aflyst: %1$S
-itipCancelBody=%1$S har aflyst denne begivenhed: « %2$S »
+itipCancelBody=%1$S har aflyst denne begivenhed: Â«Â %2$SÂ Â»
+
+invitationsLink.label=Invitationer: %1$S
