--- a/da/calendar/installer/mui.properties
+++ b/da/calendar/installer/mui.properties
@@ -44,20 +44,21 @@
 # Accesskeys are defined by prefixing the letter that is to be used for the
 # accesskey with an ampersand (e.g. &).
 
-# Do not replace $(^NameDA) or $(^Name) with a custom string.
-
-# Do not change $(^NameDA) to $(^Name) or $(^Name) to $(^NameDA). NameDA allows
-# Name to contain an ampersand (e.g. DA stands for double ampersand) and
-# prevents the letter following the ampersand being used as an accesskey.
+# Do not replace $BrandShortName, $BrandFullName, or $BrandFullNameDA with a
+# custom string and always use the same one as used by the en-US files.
+# $BrandFullNameDA allows the string to contain an ampersand (e.g. DA stands
+# for double ampersand) and prevents the letter following the ampersand from
+# being used as an accesskey.
 
 # You can use \n to create a newline in the string but only when the string
 # from en-US contains a \n.
+
 MUI_TEXT_WELCOME_INFO_TITLE=Velkommen til $(^NameDA)s installationsguide
 MUI_TEXT_WELCOME_INFO_TEXT=Denne guide vil hjælpe dig gennem installationen af $(^NameDA).\n\nDet anbefales, at du afslutter alle andre programmer, før du fortsætter. Det vil gøre det muligt at opdatere relevante systemfiler uden en genstart af computeren.\n\n$_CLICK
 MUI_TEXT_LICENSE_TITLE=Licensbetingelser
 MUI_TEXT_LICENSE_SUBTITLE=Læs venligst licensbetingelserne, før du installerer $(^NameDA).
 MUI_INNERTEXT_LICENSE_TOP=Tryk på tasten Page Down for at læse resten af betingelserne.
-MUI_INNERTEXT_LICENSE_BOTTOM_RADIOBUTTONS=Vælg den første mulighed herunder, hvis du accepterer licensbetingelserne. Du skal acceptere betingelserne for at fortsætte installationen af $(^NameDA). $_CLICK
+MUI_INNERTEXT_LICENSE_BOTTOM_CHECKBOX=Sæt flueben i boksen nedenfor, hvis du accepterer licensaftalen. Du skal acceptere licensaftalen for at kunne installere $BrandFullNameDA. $_CLICK
 MUI_TEXT_COMPONENTS_TITLE=Vælg komponenter
 MUI_TEXT_COMPONENTS_SUBTITLE=Vælg hvilke dele af $(^NameDA) du vil installere.
 MUI_INNERTEXT_COMPONENTS_DESCRIPTION_TITLE=Beskrivelse
