--- a/nl/mail/chrome/messenger/editContactOverlay.properties
+++ b/nl/mail/chrome/messenger/editContactOverlay.properties
@@ -5,3 +5,6 @@ editDetailsLabel=Details bewerken
 editDetailsAccessKey=t
 viewDetailsLabel=Details bekijken
 viewDetailsAccessKey=t
+
+deleteContactTitle=Contact verwijderen
+deleteContactMessage=Weet u zeker dat u dit contact wilt verwijderen?
